themes/milalaveo/assets/css/style.css
/* ... */
html {
    font-family: "Mulish", sans-serif;
    font-size: 16px;
}

body {
    color: var(--font-color);
    background-color: var(--background-color);
}

body.kbs {
    --background-color: var(--secondary-black);
    --font-color: var(--background);
    --footer-copy-color: var(--background);
}

body.mighty {
    --background-color: var(--main-black);
    --font-color: var(--background);
    --footer-copy-color: var(--background);
}

@keyframes marquee {
    0% { transform: translateX(0); }
    100% { transform: translateX(-100%); }
}

h1, .as_h1 {
    font-size: 2rem;
    line-height: 2.375rem;
    font-weight: 700;
    margin-bottom: 32px;
}

h2 {
    font-size: 1.75rem;
    line-height: 2.25rem;
    font-weight: 500;
}

h3 {
    font-size: 1.5rem;
    line-height: 1.9375rem;
    font-weight: 400;
}

h4 {
    font-size: 1.375rem;
    line-height: 1.8125rem;
    font-weight: 500;
}

h5 {
    font-weight: 700;
    margin-bottom: 8px;
}

strong {
    font-weight: 700;
}

.gap-xl {
    margin-bottom: 64px;
}

.gap-s {
    margin-bottom: 32px;
}

.light {
    font-weight: 300;
}

.medium {
    font-weight: 500;
}


.semibold {
    font-weight: 600;
}

.bold {
    font-weight: 700;
}

.gray {
    color: var(--main-gray);
}

.uppercase {
    text-transform: uppercase;
}

.lowercase {
    text-transform: lowercase;
}

.capitalize {
    text-transform: capitalize;
}

.underline {
    text-decoration: underline;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.paragraph1, p {
    font-size: 1rem;
    line-height: 1.625rem;
    margin-bottom: 1.5rem;
}

.paragraph2 {
    font-size: 0.875rem;
    line-height: 1.375rem;
}

a {
    color: inherit;
    font-weight: 500;
    text-decoration: none;
}

a:hover {
    color: var(--secondary);
}

a:active {
    color: var(--secondary-2);
}

.button {
    font-family: inherit;
    cursor: pointer;
    display: inline-block;
    padding: 8px 24px;
    font-size: 1rem;
    line-height: 1.625rem;
    background-color: var(--button-primary);
    color: var(--background);
    font-weight: 700;
    transition: background-color 0.3s, border 0.3s;
    border: none;
    width: 100%;
    border-radius: 24px;
}

.button:hover {
    background-color: var(--button-primary-hover);
}

.button:active {
    background-color: var(--button-primary-pressed);
}

.button_secondary {
    color: var(--main-black);
    background-color: transparent;
    border: 1px solid var(--main-black);
}

.button_secondary:hover {
    border: 1px solid var(--secondary-2);
    background-color: transparent;
}

.button_secondary:active {
    border: 1px solid var(--secondary);
    background-color: transparent;
}

.project__show-more-arrow {
    width: 48px;
    height: 48px;
    line-height: 48px;
    vertical-align: bottom;
    margin-left: 0;
}

.button-arrow {
    margin: 0 1.5rem;
    vertical-align: middle;
}

.project__show-more-heading {
    line-height: 48px;
    margin: 64px auto;
}

.button__icon {
    width: 1.5rem;
    height: 1.5rem;
    line-height: 1.625rem;
    margin-left: 8px;
    vertical-align: middle;
}

.container {
    margin: 32px auto;
}

.header {
    margin-bottom: 64px;
}

.header .logo {
    line-height: 42px;
}

.header .logo svg {
    vertical-align: middle;
}

.header__icon a {
    display: inline-block;
}

.header__icon img {
    vertical-align: middle;
}

.header__navigation {
    line-height: 1.625;
    text-align: right;
}

.navigation__list {
    text-align: center;
    list-style-type: none;
    letter-spacing: 32px;
    margin: 0;
    padding: 0;
}

.navigation__list > li {
    display: inline-block;
    letter-spacing: initial;
}

.burger__trigger {
    z-index: 99;
    display: inline;
    position: relative;
    appearance: none;
}

.burger__trigger input {
    display: none;
}

.button__label {
    position: relative;
    z-index: 99;
    display: block;
    height: 42px;
}

.button__label svg {
    position: absolute;
    right: 0;
    transition: opacity 0.2s;
}

.burger__trigger ~ .button__label .burger-icon {
    opacity: 1;
}

.burger__trigger ~ .button__label .cross-icon {
    opacity: 0;
}

.burger__trigger:checked ~ .button__label .burger-icon {
    opacity: 0;
}

.burger__trigger:checked ~ .button__label .cross-icon {
    opacity: 1;
}

.burger__trigger:checked ~ .burger__navigation {
    transform: translateX(0);
}

.header__social {
    letter-spacing: 24px;
}

.header__social li {
    display: inline-block;
}

.burger__navigation {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 80;
    background-color: var(--background-color);
    padding: 88px 24px 0;
    transform: translateX(100%);
    transition: transform 0.3s;
}

.burger__navigation li {
    display: block;
    text-align: left;
    margin-bottom: 24px;
}

.burger__navigation li:last-of-type {
    margin-bottom: 0;
}

.hero__heading, .hero__subheading {
    margin-bottom: 24px;
}

.hero__heading h1 {
    font-size: 4rem;
    color: #3D1AD0;
    line-height: 0;
}

.hero__heading h1 span {
    color: var(--main-black);
}

.hero__l {
    display: inline-block;
    vertical-align: middle;
    margin-right: -32px;
    margin-bottom: -16px;
}

.hero__subheading {
    font-size: 1.125rem;
    font-weight: 400;
    line-height: 1.625rem;
}

.hero {
    margin-top: 64px;
    margin-bottom: 64px;
    align-items: flex-end;
}

.brands__title {
    margin-bottom: 0;
}

.brands__list {
    overflow: hidden;
    position: relative;
    padding: 16px 0;
}

.marquee {
    white-space: nowrap;
    letter-spacing: -4px;
}

.marquee span {
    letter-spacing: initial;
    display: inline-flex;
    font-size: 1.5rem;
    animation: marquee 30s linear infinite;
}

.marquee:hover span {
    animation-play-state: paused;
}

.brands__brand {
    transition: all .2s ease-out;
    margin: 0 30px;
    opacity: .5;
}

.brands__brand:hover {
    transform: scale(1.2);
    opacity: 1;
}
/* ... */

